--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.3",
+    "@tanstack/react-query": "^5.55.0",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
